# langchain-datastax

./: .gitignore  README.md
.github/actions/poetry_setup/: action.yml
.github/actions/uv_setup/: action.yml
.github/scripts/: check_diff.py  get_min_versions.py
.github/workflows/: _compile_integration_test.yml  _integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/astradb/: Makefile  README.md  pyproject.toml  testing.env.sample  vs_test0.py
libs/astradb/examples/: upgrade_to_graph.ipynb
libs/astradb/examples/datasets/legal/: ipla.md  nda.md  sda.md  sla.md
libs/astradb/langchain_astradb/: __init__.py  _math.py  _mmr_helper.py  cache.py  chat_message_histories.py  document_loaders.py  graph_vectorstores.py  storage.py  vectorstores.py
libs/astradb/langchain_astradb/utils/: __init__.py  astradb.py  encoders.py  graph_upgrade_utility.py  mmr.py  mmr_helper.py  mmr_traversal.py  vector_store_autodetect.py  vector_store_codecs.py
libs/astradb/scripts/: check_imports.py
libs/astradb/tests/: conftest.py
libs/astradb/tests/integration_tests/: .env.example  conftest.py  test_cache.py  test_caches.py  test_chat_message_histories.py  test_compile.py  test_document_loaders.py  test_graphvectorstore.py  test_graphvectorstore_vectorize.py  test_semantic_cache.py  test_storage.py  test_upgrade_to_graphvectorstore.py  test_vectorstore.py  test_vectorstore_autodetect.py  test_vectorstore_ddl_tests.py  test_vectorstore_hybrid.py  test_vectorstore_langchain_tests.py  test_vectorstores.py
libs/astradb/tests/integration_tests/standard_tests/: test_cache.py  test_storage.py  test_vectorstore.py
libs/astradb/tests/unit_tests/: test_astra_db_environment.py  test_callers.py  test_imports.py  test_mmr_helper.py  test_vectorstores.py  test_vs_autodetect_inferences.py  test_vs_doc_codecs.py  test_vs_doc_encoders.py  test_vs_doc_hybrid_codecs.py
