[tool.poetry]
name = "langchain-astradb"
version = "0.3.5"
description = "An integration package connecting Astra DB and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-datastax"
license = "MIT"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-datastax/tree/main/libs/astradb"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain-core = ">=0.1.31,<0.3"
astrapy = "^1.4"
# Resolve numpy version for 3.8 to 3.12+
numpy = [
    { version = "^1.24.0", python = "<3.12" },
    { version = "^1.26.0", python = ">=3.12" },
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-dotenv = "^0.5.2"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
syrupy = "^4.0.2"
pytest-watcher = "^0.3.4"
pytest-asyncio = "^0.21.1"
langchain = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/langchain" }
langchain-text-splitters = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/text-splitters" }
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core" }

[tool.ruff.lint]
pydocstyle.convention = "google"
pep8-naming.classmethod-decorators = [
    "langchain_core.pydantic_v1.validator",
]
select = ["ALL"]
ignore = [
    "ANN", # Already checked by mypy
    "C90", # Do we want to activate (complexity) ?
    "COM812", # Messes with the formatter
    "ERA", # Do we want to activate (no commented code) ?
    "ISC001", # Messes with the formatter
    "PLR09", # TODO: do we enforce these ones (complexity) ?
    "PTH", # Do we want to activate (use pathlib) ?

    "BLE001", # TODO
    "PT011", # TODO
    "PT012", # TODO
    "D101", # TODO
    "D417", # TODO
    "PTH", # TODO

]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "S101",
    "SLF001",
    "T201",
    "PLR2004",
]
"scripts/*" = [
    "D",
    "T201",
]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5 -vv"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
